--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-scripts": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,4 +34,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
